# traction

./: .codeclimate.yml  .gitattributes  .gitignore  COMPLIANCE.yaml  README.md  cr.yaml  index.md  index.yaml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: cr.yaml  dependabot.yml
.github/workflows/: build_api.yml  build_deploy_tenant_ui.yaml  chart_release.yaml  ci.yml  delete_images.yaml  delete_pr_closed_job.yml  deploy_endorser.yaml  deploy_showcase.temp  deploy_showcase.yaml  deploy_tenant_ui.yaml  deploy_to_openshift.yaml  deploy_traction.temp  deploy_traction.yml  docker-image.yml  on_pr_closed.yaml  (+17 more)
charts/: README.md
demo/lob/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
demo/lob/app/: config.py  connect_tenants.py  set_public_did.py  storage.py
demo/plugins/rpc/controller/: .env.example  config.py  main.py  pyproject.toml  utils.py
devops/: README.md
docs/: AIP.md  ARCHITECTURE.md  README.md  RESERVATION_FLOW.md  USE-CASE-API-KEY.md  USE-CASE-ONBOARD.md  USE-CASE.md  chart-upgrade-guide.md  index.md  traction-anoncreds-workshop.md  traction-webvh-workshop.md
plugins/: .gitignore  README.md  pyproject.toml  requirements.txt  test.yaml
plugins/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  docker-compose.yml  post-install.sh
plugins/.devcontainer/configs/: default.yml  devcontainer.yml
plugins/basicmessage_storage/: README.md  pyproject.toml
plugins/basicmessage_storage/basicmessage_storage/: __init__.py  definition.py  models.py  routes.py
plugins/basicmessage_storage/basicmessage_storage/v0_1/: __init__.py  routes.py
plugins/basicmessage_storage/basicmessage_storage/v0_2/: __init__.py  routes.py
plugins/basicmessage_storage/basicmessage_storage/v1_0/: __init__.py  models.py  routes.py
plugins/basicmessage_storage/docker/: Dockerfile  default.yml
plugins/connection_update/: README.md  pyproject.toml
plugins/connection_update/connection_update/v1_0/: __init__.py  routes.py
plugins/connection_update/docker/: Dockerfile  default.yml
plugins/demo/: README.md  docker-compose.yml
plugins/demo/configs/: default.yml  devcontainer.yml
plugins/docker/: Dockerfile  Dockerfile.tenant-proxy  README.md  default.yml  tenant-proxy.conf.template
plugins/multitenant_provider/: README.md  pyproject.toml  setup.py
plugins/multitenant_provider/docker/: Dockerfile  default.yml
plugins/multitenant_provider/multitenant_provider/: __init__.py  manager.py  models.py  provider.py
plugins/multitenant_provider/multitenant_provider/v1_0/: __init__.py  config.py  manager.py  models.py  provider.py  routes.py
plugins/multitenant_tokens/: README.md  pyproject.toml
plugins/multitenant_tokens/docker/: Dockerfile  default.yml
plugins/multitenant_tokens/multitenant_tokens/: __init__.py  manager.py  provider.py  routes.py
plugins/traction_innkeeper/: .coverage  README.md  pyproject.toml  setup.cfg
plugins/traction_innkeeper/docker/: Dockerfile  default.yml
plugins/traction_innkeeper/traction_innkeeper/: __init__.py  routes.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/: __init__.py  config.py  endorser_connection_handler.py  models.py  routes.py  tenant_manager.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/connections/: __init__.py  routes.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/creddef_storage/: __init__.py  creddef_storage_service.py  models.py  routes.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/endorser/: __init__.py  endorser_connection_service.py  routes.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/innkeeper/: __init__.py  bcrypt_compat.py  config.py  models.py  routes.py  tenant_manager.py  utils.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/oca/: __init__.py  models.py  oca_service.py  routes.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/schema_cache/: __init__.py  models.py  routes.py  schema_cache_service.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/schema_storage/: __init__.py  models.py  routes.py  schema_storage_service.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/tenant/: __init__.py  holder_revocation_service.py  issuer_revocation_service.py  routes.py
plugins/traction_innkeeper/traction_innkeeper/v1_0/tests/: test_connections_routes.py  test_creddef_storage_routes.py  test_creddef_storage_service.py  test_endorser_connection_service.py  test_endorser_routes.py  test_holder_revocation_service.py  test_innkeeper_config.py  test_innkeeper_routes.py  test_innkeeper_util.py  test_issuer_revocation_service.py  test_oca_routes.py  test_oca_service.py  test_schema_storage_routes.py  test_schema_storage_service.py  test_tenant_init.py  test_tenant_manager.py  test_tenant_routes.py  test_util.py
plugins/traction_metadata/: README.md  pyproject.toml
plugins/traction_metadata/docker/: Dockerfile  default.yml
plugins/traction_metadata/traction_metadata/: __init__.py  routes.py
scripts/: .env  .env-auto-author-false  .env-auto-false  .env-auto-true  .env-auto-writetxn-true  .env-example  README.md  acapy-static-args.yml  db_init.showcase.sql  db_init.sql  docker-compose-indy.yml  docker-compose-ml-indy.yml  docker-compose-ml.yaml  docker-compose-ml.yml  docker-compose.bdd.yml  docker-compose.logs.yml  docker-compose.showcase.yml  docker-compose.yaml  docker-compose.yml  endorser-acapy-args.yml  endorser-connection.md  ledgers.yml  manage  multi-ledger-config.yml  plugin-config-indy.yml  plugin-config.yml  run-mac.sh
scripts/smoke-tests/: issue_and_revoke_direct_register.py  issue_and_revoke_register_nym.py  issue_and_revoke_request_endorsement.py  pyproject.toml
scripts/webvh-e2e/: .env.example  .gitignore  README.md  constants.py  context.py  e2e_constants.py  harness_log.py  helpers.py  phases.py  polling.py  pyproject.toml  records.py  requirements.txt  run.py  traction_client.py
scripts/webvh-e2e/phases/: __init__.py  common.py  connect.py  indy.py  issue.py  issue_verify.py  revoke.py  setup.py  smoke.py  verify.py  verify_revoke.py  webvh.py
(+2610 files in other folders)
