[tool.poetry]
name = "traction-plugins"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
acapy-agent = { version = "1.1.0" }
python-dateutil = "^2.8.2"
typing-extensions = "4.8.0"
traction-innkeeper = {path = "./traction_innkeeper", develop = true}

aries-askar = { version = "~0.3.2" }
anoncreds= { version = "0.2.0" }
indy-credx = { version = "~1.1.1" }
indy-vdr = { version = "~0.4.1" }
python3-indy = { version = "^1.11.1" }

[tool.poetry.dev-dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
