[tool.poetry]
name = "traction-plugins"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
acapy-agent = { version = "1.2.2" }
python-dateutil = "^2.9.0"
typing-extensions = "4.12.2"
traction-innkeeper = {path = "./traction_innkeeper", develop = true}

aries-askar = { version = "~0.4.3" }
anoncreds= { version = "0.2.0" }
indy-credx = { version = "~1.1.1" }
indy-vdr = { version = "~0.4.2" }
python3-indy = { version = "^1.11.1" }

[tool.poetry.dev-dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
