[tool.poetry]
name = "tenant-lob"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]

[tool.poetry.dependencies]
python = "^3.10"
Random-Word = "^1.0.11"
requests = "^2.32.2"
aiohttp = "^3.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

