[tool.poetry]
name = "basicmessage_storage"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = { version = "0.10.2" }

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"