[tool.poetry]
name = "multitenant-provider"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "multitenant_provider"}]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = { version = "0.10.3" }
python-dateutil = "^2.8.2"
bcrypt = "^4.0.1"
mergedeep = "^1.3.4"
aries-askar = "^0.2.9"
typing-extensions = "4.5.0"
indy-vdr = "^0.3.4"
indy-credx = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"