[tool.poetry]
name = "multitenant-provider"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "multitenant_provider"}]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = { version = "0.11.0rc2" }
python-dateutil = "^2.8.2"
bcrypt = "^4.0.1"
mergedeep = "^1.3.4"
aries-askar = "^0.3.0"
typing-extensions = "4.0.1"
indy-vdr = "^0.4.0"
indy-credx = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"