[tool.poetry]
name = "traction-innkeeper"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "traction_innkeeper"}]

[tool.poetry.dependencies]
python = "^3.12"
acapy-agent = { version = "1.3.2" }
python-dateutil = "^2.9.0"
bcrypt = "^4.2.1"
mergedeep = "^1.3.4"
typing-extensions = "4.15.0"
anoncreds = "^0.2.0"
multitenant-provider = {git = "https://github.com/openwallet-foundation/acapy-plugins", rev = "1.3.2", subdirectory = "multitenant_provider"}
connections = {git = "https://github.com/openwallet-foundation/acapy-plugins", rev = "1.3.2", subdirectory = "connections"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
pytest-asyncio= "^1.1.0"

[tool.pytest.ini_options]
# You might already have asyncio_mode set, 'auto' is common
asyncio_mode = "auto"
# Add this line to set the scope explicitly
asyncio_default_fixture_loop_scope = "function"
# ... other pytest options like testpaths, addopts, etc.

[build-system]
requires = ["setuptools", "poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
