[tool.poetry]
name = "traction-innkeeper"
version = "0.1.0"
description = "The Innkeeper plugin for Traction, providing core tenant management capabilities."
authors = [
    "Lucas O'Neil <lucasoneil@gmail.com>",
    "Jason Sherman <tools@usingtechnolo.gy>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://digital.gov.bc.ca/design/digital-trust/technical/traction/"
repository = "https://github.com/bcgov/traction"
packages = [{include = "traction_innkeeper"}]

[tool.poetry.dependencies]
python = "^3.12"
acapy-agent = { version = "1.4.0" }
python-dateutil = "^2.9.0"
bcrypt = "^4.2.1"
mergedeep = "^1.3.4"
typing-extensions = "4.15.0"
anoncreds = "^0.2.3"
multitenant-provider = {git = "https://github.com/openwallet-foundation/acapy-plugins", rev = "1.4.0", subdirectory = "multitenant_provider"}
connections = {git = "https://github.com/openwallet-foundation/acapy-plugins", rev = "1.4.0", subdirectory = "connections"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-asyncio= "^1.3.0"

[tool.pytest.ini_options]
# You might already have asyncio_mode set, 'auto' is common
asyncio_mode = "auto"
# Add this line to set the scope explicitly
asyncio_default_fixture_loop_scope = "function"
# ... other pytest options like testpaths, addopts, etc.

[build-system]
requires = ["setuptools", "poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
