[tool.poetry]
name = "traction-innkeeper"
version = "1.4.1"
description = "The Innkeeper plugin for Traction, providing core tenant management capabilities."
authors = [
    "Lucas O'Neil <lucasoneil@gmail.com>",
    "Jason Sherman <tools@usingtechnolo.gy>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://digital.gov.bc.ca/design/digital-trust/technical/traction/"
repository = "https://github.com/bcgov/traction"
packages = [{include = "traction_innkeeper"}]

[tool.poetry.dependencies]
python = "^3.13"
acapy-agent = { version = "1.6.0" }
python-dateutil = "^2.9.0"
bcrypt = "^5.0.0"
mergedeep = "^1.3.4"
typing-extensions = "4.15.0"
anoncreds = "^0.2.3"
multitenant-provider = {git = "https://github.com/openwallet-foundation/acapy-plugins", rev = "1.6.0", subdirectory = "multitenant_provider"}
connections = {git = "https://github.com/openwallet-foundation/acapy-plugins", rev = "1.6.0", subdirectory = "connections"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.10"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p no:warnings"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
