[tool.poetry]
name = "rpc"
version = "0.1.0"
description = ""
authors = ["Akiff Manji <amanji@petridish.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
