[tool.poetry]
name = "rpc"
version = "0.1.0"
description = ""
authors = ["Akiff Manji <amanji@petridish.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
requests = "^2.31.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
randomwords = "^0.4.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
